# pyqt6-101

./: pyproject.toml
pyqt6_101/: simple1.py  simple2.py
